Code Analysis clean up.
mspace.c is renamed to mspace.cpp  because of a bug in Visual Studio
(see https://www.osr.com/blog/2015/08/12/windows-10-wdk-visual-studio-2015-issues/)

Other changes are to quiet messages from VS code analysis and to complete the
upgrade to using Windows 10 WDK.

Update by Javier Celaya <javier.celaya@flexvdi.com>
- Keep using Windows 8.1 WDK
- Avoid using MmMapIoSpaceEx, it only exists since Windows 10.

--- a/qxldod/qxldod.vcxproj
+++ b/qxldod/qxldod.vcxproj
@@ -324,7 +324,7 @@
   <ItemGroup>
     <ClCompile Include="BaseObject.cpp" />
     <ClCompile Include="driver.cpp" />
-    <ClCompile Include="mspace.c" />
+    <ClCompile Include="mspace.cpp" />
     <ClCompile Include="QxlDod.cpp" />
   </ItemGroup>
   <ItemGroup>
